--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             --text-color: #5e548e;
             --wrong-red: #ff8fa3;
             --right-green: #b9fbc0;
-            --glass: rgba(255, 255, 255, 0.88);
+            /* Added a subtle floral pattern to the glass background */
+            --glass: rgba(255, 255, 255, 0.92);
         }
 
         * { box-sizing: border-box; }
@@ -37,6 +38,9 @@
 
         .container {
             background: var(--glass);
+            /* Soft floral theme background for the box */
+            background-image: radial-gradient(circle at 2px 2px, #ffafcc 1px, transparent 0);
+            background-size: 40px 40px;
             padding: 2.5rem 2rem;
             border-radius: 30px;
             width: 90%;
@@ -51,7 +55,6 @@
 
         h1, h2 { font-family: 'Dancing Script', cursive; color: var(--text-color); margin: 0 0 15px 0; }
 
-        /* Animation for Questions */
         .page { display: none; }
         .active { display: block; animation: slideIn 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
 
@@ -62,7 +65,7 @@
 
         .valentine-title {
             font-family: 'Great Vibes', cursive;
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             background: linear-gradient(45deg, #ff4d6d, #ffafcc);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -88,7 +91,7 @@
             font-weight: bold;
         }
 
-        button:hover { background: var(--pink); color: white; border-color: white; }
+        button:hover { background: var(--pink); color: white; border-color: white; transform: scale(1.02); }
 
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: white !important; }
 
@@ -98,10 +101,9 @@
             75% { transform: translateX(8px); }
         }
 
-        /* Gift Selection Style */
         .gift-container { display: flex; justify-content: center; gap: 30px; margin: 30px 0; }
         .gift-item { font-size: 70px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; }
-        .gift-item:hover { transform: scale(1.2); }
+        .gift-item:hover { transform: scale(1.2) rotate(5deg); }
 
         @keyframes wobble {
             0%, 100% { transform: rotate(0deg); }
@@ -109,11 +111,11 @@
             75% { transform: rotate(-5deg); }
         }
 
-        .letter-view, .password-view { display: none; text-align: left; animation: fadeIn 0.5s; }
+        .letter-view, .password-view { display: none; text-align: left; }
         .letter-paper {
             background: #fff;
             padding: 20px;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.05);
             font-family: 'Dancing Script', cursive;
             font-size: 1.3rem;
@@ -121,16 +123,35 @@
             color: #444;
         }
 
+        /* Beautiful and Cute Back Button */
         .back-icon {
-            font-size: 1.5rem;
+            font-size: 0.9rem;
             cursor: pointer;
             display: inline-block;
             margin-bottom: 15px;
+            background: #ffc8dd;
+            padding: 8px 15px;
+            border-radius: 20px;
+            color: white;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(255, 175, 204, 0.4);
             transition: 0.3s;
         }
-        .back-icon:hover { transform: scale(1.2); color: var(--pink); }
+        .back-icon:hover { background: #ffafcc; transform: translateX(-5px); }
 
-        .particle { position: absolute; width: 6px; height: 6px; border-radius: 50%; pointer-events: none; z-index: 999; }
+        /* Passcode Slow Reveal Animation */
+        .reveal-pass {
+            opacity: 0;
+            animation: slowShow 2s forwards;
+            animation-delay: 0.5s;
+        }
+
+        @keyframes slowShow {
+            from { opacity: 0; transform: translateY(10px); filter: blur(5px); }
+            to { opacity: 1; transform: translateY(0); filter: blur(0); }
+        }
+
+        .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
     </style>
 </head>
 <body>
@@ -247,7 +268,7 @@
         </div>
 
         <div id="letter-view" class="letter-view">
-            <div class="back-icon" onclick="backToGifts()">↩️ Back</div>
+            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
             <div class="letter-paper">
                 My Dearest Archana,<br><br>
                 Thank you for being in my life. Every moment with you is a treasure. I'm so happy I found you. <br><br>
@@ -257,11 +278,11 @@
         </div>
 
         <div id="password-view" class="password-view">
-            <div class="back-icon" onclick="backToGifts()">↩️ Back</div>
+            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
             <div style="text-align: center; color: var(--text-color);">
                 <h1 style="font-size: 50px;">🥹🫶🏻</h1>
                 <p>The secret gift password is:</p>
-                <h2 style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc;">
+                <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc;">
                     Archanamadhu@7736
                 </h2>
             </div>
@@ -279,7 +300,7 @@
     function resize() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; }
     window.addEventListener('resize', resize); resize();
 
-    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd'];
+    const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff'];
     const curveLines = Array.from({length: 40}, () => ({
         yBase: Math.random() * canvas.height,
         amplitude: Math.random() * 50 + 20,
@@ -312,7 +333,12 @@
     }
 
     function next(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(); }
+        if(isCorrect) { 
+            score++; 
+            btn.style.backgroundColor = "#b9fbc0"; 
+            // Triggered MORE sparkles (30 particles instead of 10)
+            createFireworks(30); 
+        }
         else { btn.classList.add('shake'); }
         setTimeout(() => {
             document.getElementById(`q${currentStep}`).classList.remove('active');
@@ -322,7 +348,7 @@
     }
 
     function checkScore(btn, isCorrect) {
-        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; }
+        if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(40); }
         else { btn.classList.add('shake'); }
         setTimeout(() => {
             document.getElementById(`q11`).classList.remove('active');
@@ -339,13 +365,19 @@
         }, 600);
     }
 
-    function createFireworks() {
-        for (let i = 0; i < 10; i++) {
+    // Improved sparkle function for more visual impact
+    function createFireworks(count = 10) {
+        for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
-            p.className = 'particle'; p.style.backgroundColor = colors[Math.floor(Math.random()*3)];
+            p.className = 'particle'; 
+            p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
             p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p);
-            const dX = (Math.random() - 0.5) * 300, dY = (Math.random() - 0.5) * 300;
-            p.animate([{opacity: 1}, {transform: `translate(${dX}px, ${dY}px)`, opacity: 0}], 1000).onfinish = () => p.remove();
+            // Wider spread for "more sparkles"
+            const dX = (Math.random() - 0.5) * 500, dY = (Math.random() - 0.5) * 500;
+            p.animate([
+                { opacity: 1, transform: 'translate(0,0) scale(1)' }, 
+                { opacity: 0, transform: `translate(${dX}px, ${dY}px) scale(0.2)`, filter: 'blur(2px)' }
+            ], 1200).onfinish = () => p.remove();
         }
     }
 
@@ -359,7 +391,14 @@
         document.getElementById('letter-view').style.display = 'none';
         document.getElementById('password-view').style.display = 'none';
         document.getElementById(viewId).style.display = 'block';
-        if(viewId === 'password-view') createFireworks();
+        if(viewId === 'password-view') {
+            createFireworks(50);
+            // Trigger the slow reveal by resetting the class
+            const el = document.querySelector('.reveal-pass');
+            el.style.animation = 'none';
+            el.offsetHeight; /* trigger reflow */
+            el.style.animation = null;
+        }
     }
 
     function backToGifts() {
