--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Special Surprise for You</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --pink: #ffafcc;
             --text-color: #5e548e;
-            --wrong-red: #ff8fa3;
+            --wrong-red: #ffccd5; /* Light Red for wrong answers */
             --right-green: #b9fbc0;
-            /* Added a subtle floral pattern to the glass background */
             --glass: rgba(255, 255, 255, 0.92);
         }
 
@@ -21,7 +20,7 @@
             margin: 0; padding: 0;
             width: 100%; height: 100%;
             overflow: hidden;
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Quicksand', sans-serif;
             background: linear-gradient(120deg, #ffafcc, #bde0fe, #ffc8dd, #b9fbc0, #fcf6bd);
             background-size: 400% 400%;
             animation: rainbowBG 15s ease infinite;
@@ -36,11 +35,11 @@
 
         #lineCanvas { position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
 
+        /* MOVING ANIMATION IN QUIZ BOX */
         .container {
-            background: var(--glass);
-            /* Soft floral theme background for the box */
-            background-image: radial-gradient(circle at 2px 2px, #ffafcc 1px, transparent 0);
-            background-size: 40px 40px;
+            background: linear-gradient(-45deg, #ffffff, #fff0f3, #f0f7ff, #ffffff);
+            background-size: 300% 300%;
+            animation: moveGradient 8s ease infinite;
             padding: 2.5rem 2rem;
             border-radius: 30px;
             width: 90%;
@@ -53,7 +52,28 @@
             box-shadow: 0 20px 50px rgba(0,0,0,0.1);
         }
 
-        h1, h2 { font-family: 'Dancing Script', cursive; color: var(--text-color); margin: 0 0 15px 0; }
+        @keyframes moveGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        h1 { font-family: 'Great Vibes', cursive; color: var(--text-color); margin: 0 0 15px 0; font-size: 2.5rem; }
+        
+        /* CUTE STYLE FOR QUESTIONS */
+        h2 { 
+            font-family: 'Dancing Script', cursive; 
+            color: #ff4d6d; 
+            font-size: 2rem;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-weight: 700;
+            color: var(--text-color);
+            font-size: 1.1rem;
+            margin-bottom: 20px;
+        }
 
         .page { display: none; }
         .active { display: block; animation: slideIn 0.6s cubic-bezier(0.23, 1, 0.32, 1); }
@@ -77,23 +97,38 @@
             50% { transform: translateY(-10px); }
         }
 
-        .options-grid { display: flex; flex-direction: column; gap: 10px; margin-top: 20px; }
+        .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
 
+        /* CUTE STYLE FOR OPTIONS */
         button {
             width: 100%;
-            padding: 12px;
-            border: 2px solid var(--pink);
-            background: white;
-            border-radius: 15px;
+            padding: 14px;
+            border: 2px solid #ffccd5;
+            background: rgba(255, 255, 255, 0.8);
+            border-radius: 20px;
             cursor: pointer;
             transition: 0.3s;
             color: var(--text-color);
-            font-weight: bold;
+            font-family: 'Quicksand', sans-serif;
+            font-weight: 700;
+            font-size: 1rem;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.02);
         }
 
-        button:hover { background: var(--pink); color: white; border-color: white; transform: scale(1.02); }
+        button:hover { 
+            background: var(--pink); 
+            color: white; 
+            border-color: white; 
+            transform: scale(1.03); 
+        }
 
-        .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: white !important; }
+        /* SHAKE WITH LIGHT RED */
+        .shake { 
+            animation: shake 0.4s ease-in-out; 
+            background-color: var(--wrong-red) !important; 
+            border-color: #ff8fa3 !important;
+            color: #b91c1c !important;
+        }
 
         @keyframes shake {
             0%, 100% { transform: translateX(0); }
@@ -103,7 +138,7 @@
 
         .gift-container { display: flex; justify-content: center; gap: 30px; margin: 30px 0; }
         .gift-item { font-size: 70px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; }
-        .gift-item:hover { transform: scale(1.2) rotate(5deg); }
+        .gift-item:hover { transform: scale(1.2); }
 
         @keyframes wobble {
             0%, 100% { transform: rotate(0deg); }
@@ -118,28 +153,26 @@
             border-radius: 15px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.05);
             font-family: 'Dancing Script', cursive;
-            font-size: 1.3rem;
+            font-size: 1.4rem;
             line-height: 1.5;
             color: #444;
         }
 
-        /* Beautiful and Cute Back Button */
         .back-icon {
             font-size: 0.9rem;
             cursor: pointer;
             display: inline-block;
             margin-bottom: 15px;
             background: #ffc8dd;
-            padding: 8px 15px;
-            border-radius: 20px;
+            padding: 8px 18px;
+            border-radius: 25px;
             color: white;
             font-weight: bold;
             box-shadow: 0 4px 10px rgba(255, 175, 204, 0.4);
             transition: 0.3s;
         }
-        .back-icon:hover { background: #ffafcc; transform: translateX(-5px); }
+        .back-icon:hover { background: #ffafcc; transform: scale(1.1); }
 
-        /* Passcode Slow Reveal Animation */
         .reveal-pass {
             opacity: 0;
             animation: slowShow 2s forwards;
@@ -161,7 +194,7 @@
 <div class="container">
     <div id="instruction-page" class="page active">
         <h1>Hyy Archana Madhu! 🌸</h1>
-        <p style="font-size: 0.9rem;">Follow the instruction:</p>
+        <p>Follow the instruction:</p>
         <div style="text-align: left; margin: 20px 0; color: #777; font-size: 0.9rem;">
             <div>✨ 1. Don’t Smile.</div>
             <div>✨ 2. Correct all the answers (11/11).</div>
@@ -336,20 +369,26 @@
         if(isCorrect) { 
             score++; 
             btn.style.backgroundColor = "#b9fbc0"; 
-            // Triggered MORE sparkles (30 particles instead of 10)
             createFireworks(30); 
+            setTimeout(() => {
+                document.getElementById(`q${currentStep}`).classList.remove('active');
+                currentStep++;
+                document.getElementById(`q${currentStep}`).classList.add('active');
+            }, 600);
         }
-        else { btn.classList.add('shake'); }
-        setTimeout(() => {
-            document.getElementById(`q${currentStep}`).classList.remove('active');
-            currentStep++;
-            document.getElementById(`q${currentStep}`).classList.add('active');
-        }, 600);
+        else { 
+            btn.classList.add('shake'); 
+            setTimeout(() => btn.classList.remove('shake'), 400);
+        }
     }
 
     function checkScore(btn, isCorrect) {
         if(isCorrect) { score++; btn.style.backgroundColor = "#b9fbc0"; createFireworks(40); }
-        else { btn.classList.add('shake'); }
+        else { 
+            btn.classList.add('shake'); 
+            setTimeout(() => btn.classList.remove('shake'), 400);
+            return;
+        }
         setTimeout(() => {
             document.getElementById(`q11`).classList.remove('active');
             document.getElementById('result-page').classList.add('active');
@@ -365,14 +404,12 @@
         }, 600);
     }
 
-    // Improved sparkle function for more visual impact
     function createFireworks(count = 10) {
         for (let i = 0; i < count; i++) {
             const p = document.createElement('div');
             p.className = 'particle'; 
             p.style.backgroundColor = colors[Math.floor(Math.random()*4)];
             p.style.left = '50%'; p.style.top = '50%'; document.body.appendChild(p);
-            // Wider spread for "more sparkles"
             const dX = (Math.random() - 0.5) * 500, dY = (Math.random() - 0.5) * 500;
             p.animate([
                 { opacity: 1, transform: 'translate(0,0) scale(1)' }, 
@@ -391,14 +428,7 @@
         document.getElementById('letter-view').style.display = 'none';
         document.getElementById('password-view').style.display = 'none';
         document.getElementById(viewId).style.display = 'block';
-        if(viewId === 'password-view') {
-            createFireworks(50);
-            // Trigger the slow reveal by resetting the class
-            const el = document.querySelector('.reveal-pass');
-            el.style.animation = 'none';
-            el.offsetHeight; /* trigger reflow */
-            el.style.animation = null;
-        }
+        if(viewId === 'password-view') createFireworks(50);
     }
 
     function backToGifts() {
