--- a/index.html
+++ b/index.html
@@ -68,19 +68,34 @@
             to { transform: translateX(0); opacity: 1; }
         }
 
-        .valentine-title {
+        /* --- THREE DIFFERENT TITLES --- */
+        .title-letter {
             font-family: 'Great Vibes', cursive;
-            font-size: 2.8rem;
-            background: linear-gradient(45deg, #ff4d6d, #ffafcc);
+            font-size: 2.2rem;
+            color: #ff8fa3;
+            animation: softFade 2s ease-in-out infinite alternate;
+        }
+        @keyframes softFade { from { opacity: 0.6; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
+
+        .title-music {
+            font-family: 'Dancing Script', cursive;
+            font-size: 2.4rem;
+            color: #ff4d6d;
+            text-shadow: 0 0 10px rgba(255, 77, 109, 0.3);
+            animation: heartbeat 1.5s infinite;
+        }
+        @keyframes heartbeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
+
+        .title-gift {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 2rem;
+            background: linear-gradient(to right, #ef476f, #ffd166, #06d6a0);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            animation: floatText 3s ease-in-out infinite;
+            animation: bounceIn 1s ease-out;
         }
-
-        @keyframes floatText {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-        }
+        @keyframes bounceIn { 0% { transform: scale(0.3); opacity: 0; } 50% { transform: scale(1.05); opacity: 1; } 70% { transform: scale(0.9); } 100% { transform: scale(1); } }
 
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
 
@@ -95,43 +110,23 @@
             color: var(--text-color);
             font-family: 'Quicksand', sans-serif;
             font-weight: 700;
-            font-size: 1rem;
         }
-
         button:hover { background: var(--pink); color: white; border-color: white; transform: scale(1.03); }
 
-        .shake { 
-            animation: shake 0.4s ease-in-out; 
-            background-color: var(--wrong-red) !important; 
-            border-color: #ff8fa3 !important;
-            color: #b91c1c !important;
-        }
-
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-8px); }
-            75% { transform: translateX(8px); }
-        }
+        .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
+        @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
         .gift-item { font-size: 60px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; }
-        .gift-item:hover { transform: scale(1.2); }
-
-        @keyframes wobble {
-            0%, 100% { transform: rotate(0deg); }
-            25% { transform: rotate(5deg); }
-            75% { transform: rotate(-5deg); }
-        }
+        @keyframes wobble { 0%, 100% { transform: rotate(0deg); } 25% { transform: rotate(5deg); } 75% { transform: rotate(-5deg); } }
 
         .letter-view, .password-view, .music-view { display: none; text-align: left; }
         .letter-paper {
             background: #fff;
             padding: 20px;
             border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
             font-family: 'Dancing Script', cursive;
             font-size: 1.4rem;
-            line-height: 1.5;
             color: #444;
         }
 
@@ -145,16 +140,10 @@
             border-radius: 25px;
             color: white;
             font-weight: bold;
-            box-shadow: 0 4px 10px rgba(255, 175, 204, 0.4);
-            transition: 0.3s;
         }
-        .back-icon:hover { background: #ffafcc; transform: scale(1.1); }
 
-        .reveal-pass { opacity: 0; animation: slowShow 2s forwards; animation-delay: 0.5s; }
-        @keyframes slowShow {
-            from { opacity: 0; transform: translateY(10px); filter: blur(5px); }
-            to { opacity: 1; transform: translateY(0); filter: blur(0); }
-        }
+        .reveal-pass { opacity: 0; animation: slowShow 2s forwards; }
+        @keyframes slowShow { to { opacity: 1; transform: translateY(0); } }
 
         .particle { position: absolute; width: 8px; height: 8px; border-radius: 50%; pointer-events: none; z-index: 999; }
     </style>
@@ -196,9 +185,8 @@
     </div>
 
     <div id="gift-page" class="page">
-        <h1 class="valentine-title">Happy Valentine's Day!</h1>
+        <h1>Choose Your Surprise</h1>
         <div id="gift-selection">
-            <p>You unlocked three surprises, Babbyyy!</p>
             <div class="gift-container">
                 <div class="gift-item" onclick="openView('letter-view')">💌</div>
                 <div class="gift-item" onclick="openView('music-view', true)">🎵</div>
@@ -208,20 +196,22 @@
 
         <div id="music-view" class="music-view">
             <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
-            <div style="text-align: center;">
-                <h2 style="font-size: 50px;">🎵✨❤️</h2>
+            <div class="title-music">Happy Valentine's Day!</div>
+            <div style="text-align: center; margin-top: 20px;">
                 <p style="font-family: 'Dancing Script'; font-size: 1.6rem; color: #ff4d6d;">
-                    Listening to this song, I only think of you. <br>
-                    You make my world beautiful, Archana.
+                    Every note of this song reminds me of you. <br>
+                    You are the melody in my heart, Archana. <br>
+                    I could listen to this forever with you. ✨
                 </p>
             </div>
         </div>
 
         <div id="letter-view" class="letter-view">
             <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
+            <div class="title-letter">Happy Valentine's Day!</div>
             <div class="letter-paper">
                 My Dearest Archana,<br><br>
-                Thank you for being in my life. Every moment with you is a treasure. I'm so happy I found you. <br><br>
+                Thank you for being in my life. Every moment with you is a treasure. <br><br>
                 Always yours, <br>
                 Bibin ❤️
             </div>
@@ -229,10 +219,10 @@
 
         <div id="password-view" class="password-view">
             <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
-            <div style="text-align: center;">
-                <h1 style="font-size: 50px;">🥹🫶🏻</h1>
+            <div class="title-gift">Happy Valentine's Day!</div>
+            <div style="text-align: center; margin-top: 20px;">
                 <p>The secret gift password is:</p>
-                <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc;">
+                <h2 class="reveal-pass" style="color: #5e548e; background: #fff0f3; padding: 15px; border-radius: 10px; border: 2px dashed #ffafcc;">
                     Archanamadhu@7736
                 </h2>
             </div>
@@ -251,11 +241,9 @@
 
     const colors = ['#ffafcc', '#bde0fe', '#ffc8dd', '#fff'];
     const curveLines = Array.from({length: 40}, () => ({
-        yBase: Math.random() * canvas.height,
-        amplitude: Math.random() * 50 + 20,
-        frequency: Math.random() * 0.003 + 0.001,
-        speed: Math.random() * 0.01 + 0.005, offset: Math.random() * 5000,
-        color: colors[Math.floor(Math.random() * colors.length)],
+        yBase: Math.random() * canvas.height, amplitude: Math.random() * 50 + 20,
+        frequency: Math.random() * 0.003 + 0.001, speed: Math.random() * 0.01 + 0.005,
+        offset: Math.random() * 5000, color: colors[Math.floor(Math.random() * colors.length)],
         width: Math.random() * 3 + 2, opacity: 0.2
     }));
 
@@ -301,7 +289,7 @@
                 text.innerText = `Perfect Score! 11/11! ✨`;
                 giftBtn.style.display = 'block'; giftBtn.innerText = "Claim Your Gifts"; giftBtn.onclick = showGift;
             } else {
-                text.innerText = `You got ${score}/11. You must get EVERY answer correct! 🌸`;
+                text.innerText = `You got ${score}/11. Try Again! 🌸`;
                 giftBtn.style.display = 'block'; giftBtn.innerText = "Try Again 🔄"; giftBtn.onclick = () => location.reload();
             }
         }, 600);
@@ -324,6 +312,9 @@
 
     function openView(viewId, isMusic = false) {
         document.getElementById('gift-selection').style.display = 'none';
+        document.getElementById('letter-view').style.display = 'none';
+        document.getElementById('password-view').style.display = 'none';
+        document.getElementById('music-view').style.display = 'none';
         document.getElementById(viewId).style.display = 'block';
         if(isMusic) music.play();
     }
