--- a/index.html
+++ b/index.html
@@ -68,16 +68,6 @@
             to { transform: translateX(0); opacity: 1; }
         }
 
-        /* NEW CUSTOM TITLES FOR INTERNAL PAGES */
-        .title-letter { font-family: 'Great Vibes', cursive; font-size: 2.2rem; color: #ff8fa3; animation: softFade 2s ease-in-out infinite alternate; margin-bottom: 15px; }
-        @keyframes softFade { from { opacity: 0.6; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
-
-        .title-music { font-family: 'Dancing Script', cursive; font-size: 2.4rem; color: #ff4d6d; animation: heartbeat 1.5s infinite; margin-bottom: 15px; }
-        @keyframes heartbeat { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.1); } }
-
-        .title-gift { font-family: 'Poppins', sans-serif; font-weight: 600; font-size: 1.8rem; background: linear-gradient(to right, #ef476f, #ffd166, #06d6a0); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: bounceIn 1s ease-out; margin-bottom: 15px; }
-        @keyframes bounceIn { 0% { transform: scale(0.3); opacity: 0; } 50% { transform: scale(1.05); opacity: 1; } 100% { transform: scale(1); } }
-
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
 
         button {
@@ -97,7 +87,6 @@
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
-        /* ORIGINAL SELECTION PAGE STYLE */
         .valentine-title { font-family: 'Great Vibes', cursive; font-size: 2.8rem; background: linear-gradient(45deg, #ff4d6d, #ffafcc); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: floatText 3s ease-in-out infinite; }
         @keyframes floatText { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
         
@@ -106,9 +95,24 @@
         @keyframes wobble { 0%, 100% { transform: rotate(0deg); } 25% { transform: rotate(5deg); } 75% { transform: rotate(-5deg); } }
 
         .letter-view, .password-view, .music-view { display: none; text-align: left; }
-        .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; }
+        .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; margin-bottom: 20px;}
 
-        .back-icon { font-size: 0.8rem; cursor: pointer; display: inline-block; margin-bottom: 10px; background: #ffc8dd; padding: 6px 15px; border-radius: 20px; color: white; font-weight: bold; }
+        /* BACK BUTTON MOVED TO BOTTOM */
+        .back-icon { 
+            font-size: 0.8rem; 
+            cursor: pointer; 
+            display: inline-block; 
+            margin-top: 15px; 
+            background: #ffc8dd; 
+            padding: 8px 20px; 
+            border-radius: 20px; 
+            color: white; 
+            font-weight: bold;
+            transition: 0.3s;
+            text-align: center;
+        }
+        .back-icon:hover { background: #ffafcc; }
+        .center-btn { text-align: center; width: 100%; }
 
         .reveal-pass { opacity: 0; animation: slowShow 2s forwards; }
         @keyframes slowShow { to { opacity: 1; } }
@@ -164,36 +168,39 @@
         </div>
 
         <div id="music-view" class="music-view">
-            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
-            <div class="title-music">Happy Valentine's Day!</div>
-            <div style="text-align: center;">
+            <div style="text-align: center; margin-top: 20px;">
                 <p style="font-family: 'Dancing Script'; font-size: 1.5rem; color: #ff4d6d; line-height: 1.4;">
                     Every note of this song reminds me of you. <br>
                     You are the melody in my heart, Archana. <br>
                     I could listen to this forever with you. ✨
                 </p>
+                <div class="center-btn">
+                    <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
+                </div>
             </div>
         </div>
 
         <div id="letter-view" class="letter-view">
-            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
-            <div class="title-letter">Happy Valentine's Day!</div>
             <div class="letter-paper">
                 My Dearest Archana,<br><br>
                 Thank you for being in my life. Every moment with you is a treasure. I'm so happy I found you. <br><br>
                 Always yours, <br>
                 Bibin ❤️
             </div>
+            <div class="center-btn">
+                <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
+            </div>
         </div>
 
         <div id="password-view" class="password-view">
-            <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
-            <div class="title-gift">Happy Valentine's Day!</div>
-            <div style="text-align: center;">
+            <div style="text-align: center; margin-top: 20px;">
                 <p>The secret gift password is:</p>
-                <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc;">
+                <h2 class="reveal-pass" style="color: #ff4d6d; background: white; padding: 10px; border-radius: 10px; border: 2px dashed #ffafcc; margin-bottom: 25px;">
                     Archanamadhu@7736
                 </h2>
+                <div class="center-btn">
+                    <div class="back-icon" onclick="backToGifts()">🌸 Back</div>
+                </div>
             </div>
         </div>
     </div>
