--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Special Surprise for You</title>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&family=Quicksand:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&family=Quicksand:wght@500;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <style>
         :root {
             --pink: #ffafcc;
@@ -71,24 +71,26 @@
         .options-grid { display: flex; flex-direction: column; gap: 12px; margin-top: 20px; }
 
         button {
-            width: 100%;
-            padding: 14px;
-            border: 2px solid #ffccd5;
-            background: rgba(255, 255, 255, 0.8);
-            border-radius: 20px;
-            cursor: pointer;
-            transition: 0.3s;
-            color: var(--text-color);
-            font-family: 'Quicksand', sans-serif;
-            font-weight: 700;
+            width: 100%; padding: 14px; border: 2px solid #ffccd5;
+            background: rgba(255, 255, 255, 0.8); border-radius: 20px;
+            cursor: pointer; transition: 0.3s; color: var(--text-color);
+            font-family: 'Quicksand', sans-serif; font-weight: 700;
         }
         button:hover { background: var(--pink); color: white; border-color: white; transform: scale(1.03); }
 
         .shake { animation: shake 0.4s ease-in-out; background-color: var(--wrong-red) !important; color: #b91c1c !important; }
         @keyframes shake { 0%, 100% { transform: translateX(0); } 25% { transform: translateX(-8px); } 75% { transform: translateX(8px); } }
 
-        .valentine-title { font-family: 'Great Vibes', cursive; font-size: 2.8rem; background: linear-gradient(45deg, #ff4d6d, #ffafcc); -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: floatText 3s ease-in-out infinite; }
-        @keyframes floatText { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+        /* --- UPDATED VALENTINE TITLE STYLE --- */
+        .valentine-title { 
+            font-family: 'Dancing Script', cursive; 
+            font-size: 3rem; 
+            font-weight: 700;
+            color: #ff4d6d;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+            animation: floatText 3s ease-in-out infinite; 
+        }
+        @keyframes floatText { 0%, 100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-10px) scale(1.05); } }
         
         .gift-container { display: flex; justify-content: center; gap: 20px; margin: 30px 0; }
         .gift-item { font-size: 60px; cursor: pointer; transition: 0.3s; animation: wobble 2s infinite; }
@@ -97,21 +99,27 @@
         .letter-view, .password-view, .music-view { display: none; text-align: left; }
         .letter-paper { background: #fff; padding: 20px; border-radius: 15px; font-family: 'Dancing Script', cursive; font-size: 1.4rem; color: #444; margin-bottom: 20px;}
 
-        /* BACK BUTTON MOVED TO BOTTOM */
-        .back-icon { 
-            font-size: 0.8rem; 
-            cursor: pointer; 
-            display: inline-block; 
-            margin-top: 15px; 
-            background: #ffc8dd; 
-            padding: 8px 20px; 
-            border-radius: 20px; 
-            color: white; 
-            font-weight: bold;
-            transition: 0.3s;
+        /* --- UNIQUE MUSIC PAGE STYLE --- */
+        .music-text {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 1.2rem;
+            color: #8338ec; /* Deep Purple/Rose */
+            line-height: 1.6;
+            letter-spacing: 0.5px;
+            font-weight: 600;
             text-align: center;
+            background: linear-gradient(45deg, #ff4d6d, #8338ec);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
-        .back-icon:hover { background: #ffafcc; }
+
+        .back-icon { 
+            font-size: 0.8rem; cursor: pointer; display: inline-block; 
+            margin-top: 15px; background: #ffc8dd; padding: 8px 20px; 
+            border-radius: 20px; color: white; font-weight: bold;
+            transition: 0.3s; text-align: center;
+        }
+        .back-icon:hover { background: #ffafcc; transform: translateY(-2px); }
         .center-btn { text-align: center; width: 100%; }
 
         .reveal-pass { opacity: 0; animation: slowShow 2s forwards; }
@@ -169,7 +177,7 @@
 
         <div id="music-view" class="music-view">
             <div style="text-align: center; margin-top: 20px;">
-                <p style="font-family: 'Dancing Script'; font-size: 1.5rem; color: #ff4d6d; line-height: 1.4;">
+                <p class="music-text">
                     Every note of this song reminds me of you. <br>
                     You are the melody in my heart, Archana. <br>
                     I could listen to this forever with you. ✨
