--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <div id="instruction-page" class="page active">
         <h1>Hyy Archana Madhu! 🌸</h1>
-        <p>Follow the instruction:</p>
+        <p>Follow the instructions:</p>
         <div style="text-align: left; margin: 20px 0; color: #777; font-size: 0.9rem;">
             <div>✨ 1. Don’t Smile.</div>
             <div>✨ 2. Correct all the answers (11/11).</div>
